YAML-STANTARD/standard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: standard

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bdd-statefulset
  namespace: standard
spec:
  serviceName: "bdd-service"
  replicas: 1
  selector:
    matchLabels:
      app: bdd
  template:
    metadata:
      labels:
        app: bdd
    spec:
      containers:
      - name: postgres-container
        image: postgres:12.0-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: exam-kub-pvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminbdd-deployment
  namespace: standard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminbdd
  template:
    metadata:
      labels:
        app: adminbdd
    spec:
      containers:
      - name: pgadmin-container
        image: dpage/pgadmin4
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: standard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi-container
        image: boudun/fastapi
        ports:
        - containerPort: 5000


---


apiVersion: v1
kind: Service
metadata:
  name: bdd-statefulset
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432


---


apiVersion: v1
kind: Service
metadata:
  name: adminbdd-deployment
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80


---


apiVersion: v1
kind: Service
metadata:
  name: fastapi-deployment
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
